assets/css/style.css
/**
* Template Name: Mamba - v2.0.1
* Template URL: https://bootstrapmade.com/mamba-one-page-bootstrap-template-free/
* Author: BootstrapMade.com
* License: https://bootstrapmade.com/license/
*/

/*--------------------------------------------------------------
# General
--------------------------------------------------------------*/
:root {
    --color-white: #ffffff;
    --color-primary: #0e4480;
    --color-secondary: #f8c889;
    --color-icons: #fed131;
    --color-tertiary: #166bbe;
    --color-text: #444;
    --color-btn: #414042;
}

* {
    margin: 0;
    padding: 0;
}

body {
    font-family: 'Open Sans', sans-serif;
    color: var(--color-text);
}

a {
    color: var(--color-text);
}

a:hover {
    color: var(--color-secondary);
    text-decoration: none;
}

h1,
h2,
h3,
h4,
h5,
h6,
.font-primary {
    font-family: 'Raleway', sans-serif;
}

/*--------------------------------------------------------------
# Back to top button
--------------------------------------------------------------*/
.back-to-top {
    position: fixed;
    display: none;
    width: 40px;
    height: 40px;
    border-radius: 3px;
    right: 15px;
    bottom: 15px;
    background: var(--color-tertiary);
    color: var(--color-white);
    transition: display 0.5s ease-in-out;
    z-index: 99999;
}

.back-to-top i {
    font-size: 24px;
    position: absolute;
    top: 8px;
    left: 8px;
}

.back-to-top:hover {
    color: var(--color-secondary);
    transition: all 0.2s ease-in-out;
}

/*--------------------------------------------------------------
# Top Bar
--------------------------------------------------------------*/
#topbar {
    background: var(--color-tertiary);
    padding: 20px 0;
    border-bottom: 1px solid var(--color-secondary);
    font-size: 16px;
}

#topbar .contact-info a {
    line-height: 1;
    color: var(--color-white);
    transition: 0.3s;
}

#topbar .contact-info a span {
    color: var(--color-icons);
    font-weight: 900;
    font-size: 20px;
}

#topbar .contact-info i {
    color: var(--color-icons);
    padding: 4px;
    font-size: 20px;
}

#topbar .contact-info .icofont-ui-cell-phone {
    padding-left: 20px;
    margin-left: 10px;
}

#topbar .social-links a {
    color: var(--color-white);
    padding: 4px 12px;
    display: inline-block;
    line-height: 1px;
    transition: 0.3s;
}

#topbar .social-links a:hover {
    color: var(--color-icons);
}

/*--------------------------------------------------------------
# Header
--------------------------------------------------------------*/
#header {
    height: 100px;
    transition: all 0.5s;
    background: var(--color-primary);
    z-index: 997;
    position: relative;
}

#header.header-scrolled {
    box-shadow: 1px 4px 6px rgba(0, 0, 0, 0.3);
}

#header .logo h1 {
    font-size: 28px;
    margin: 0;
    padding: 10px 0;
    line-height: 1;
    font-weight: 400;
    letter-spacing: 3px;
    text-transform: uppercase;
}

#header .logo h1 a,
#header .logo h1 a:hover {
    color: #1c5c93;
    text-decoration: none;
}

#header .logo img {
    width: 120px;
    position: absolute;
    top: 20px;
    transform: translateX(-15px);
}

/*--------------------------------------------------------------
# Navigation Menu
--------------------------------------------------------------*/
/* Desktop Navigation */
.nav-menu {
    display: flex;
    flex-direction: column;
    align-items: center;
    height: 100px;
}

.nav-menu ul {
    height: inherit;
    width: 100%;
    display: flex;
    justify-content: space-between;
    align-items: center;
    list-style: none;
    margin-bottom: 0;
}

.nav-menu > ul > li {
    align-self: center;
    position: relative;
    white-space: nowrap;
    float: left;
}

.nav-menu a {
    display: block;
    position: relative;
    color: var(--color-white);
    padding: 0 20px;
    transition: 0.3s;
    font-size: 16px;
    font-family: 'Open Sans', sans-serif;
}

.nav-menu a:hover,
.nav-menu .active > a,
.nav-menu li:hover > a {
    color: var(--color-icons);
    text-decoration: none;
}

.nav-menu .drop-down ul {
    width: 250px;
    display: block;
    position: absolute;
    left: 0;
    top: 100%;
    z-index: 99;
    opacity: 0;
    visibility: hidden;
    padding: 10px 0;
    background: var(--color-tertiary);
    box-shadow: 0px 0px 30px rgba(127, 137, 161, 0.25);
    transition: ease all 0.3s;
}

.nav-menu .drop-down:hover > ul {
    opacity: 1;
    top: 100%;
    visibility: visible;
}

.nav-menu .drop-down li {
    min-width: 180px;
    position: relative;
}

.nav-menu .drop-down ul a {
    padding: 10px 20px;
    font-size: 14px;
    font-weight: 500;
    text-transform: none;
    color: var(--color-white);
}

.nav-menu .drop-down ul a:hover,
.nav-menu .drop-down ul .active > a,
.nav-menu .drop-down ul li:hover > a {
    color: var(--color-icons);
}

.nav-menu .drop-down > a:after {
    content: '\ea99';
    font-family: IcoFont;
    padding-left: 5px;
}

.nav-menu .drop-down .drop-down ul {
    top: 0;
    left: 100%;
}

.nav-menu .drop-down .drop-down:hover > ul {
    opacity: 1;
    top: 0;
}

.nav-menu .drop-down .drop-down > a {
    padding-right: 35px;
}

.nav-menu .drop-down .drop-down > a:after {
    content: '\eaa0';
    font-family: IcoFont;
    position: absolute;
    right: 15px;
}

@media (max-width: 1366px) {
    .nav-menu .drop-down .drop-down ul {
        left: -90%;
    }
    .nav-menu .drop-down .drop-down:hover > ul {
        left: -100%;
    }
    .nav-menu .drop-down .drop-down > a:after {
        content: '\ea9d';
    }
}

/* Mobile Navigation */
.mobile-nav {
    position: fixed;
    top: 0;
    bottom: 0;
    z-index: 9999;
    overflow-y: auto;
    left: -260px;
    width: 260px;
    padding-top: 18px;
    background: #1f3548;
    transition: 0.4s;
}

.mobile-nav * {
    margin: 0;
    padding: 0;
    list-style: none;
}

.mobile-nav a {
    display: block;
    position: relative;
    color: #e3f0fc;
    padding: 10px 20px;
    font-weight: 500;
}
/* ... */

